dark mode fixes

--- a/src/scss/theme/dark/menu.scss
+++ b/src/scss/theme/dark/menu.scss
@@ -284,7 +284,7 @@
 	.menu.menuOnboarding { width: 288px; background: #373632; color: #fff; box-shadow: 0px 4px 16px rgb(0 0 0 / 20%); }
 	.menu.menuOnboarding {
 		a { color: $colorWhite; }
-		.highlight { background: $colorLineSecondary; color: $colorSecondary; }
+		.highlight { background: $colorLineSecondary; color: $colorOrange; }
 
         .icon.close:hover { background-image: url('#{$themePath}/icon/menu/onboarding/close1.svg'); }
 
